[gd_scene load_steps=4 format=2]

[ext_resource path="res://UI/OfcInfoRT.gd" type="Script" id=1]
[ext_resource path="res://UI/AllPlayerOfcLst.gd" type="Script" id=2]
[ext_resource path="res://UI/pop_shortcut.tres" type="ShortCut" id=3]

[node name="AllPlayerOfcLst" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 0.108398
anchor_top = 0.133333
anchor_right = 0.640625
anchor_bottom = 0.895
__meta__ = {
"_edit_use_anchors_": true
}

[node name="OfficerInfoRT" type="RichTextLabel" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 538.0
margin_bottom = 450.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="."]
anchor_left = 0.673828
anchor_top = 0.108333
anchor_right = 0.94043
anchor_bottom = 0.913333
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Return" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -22.0
margin_top = -18.0
margin_right = 22.0
shortcut = ExtResource( 3 )
text = "Return"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="Return" to="." method="_on_Button_pressed"]
